# alignment-api

./: .buildpacks  .gitignore  Procfile  README.md  app.json
client/: README.md  package-lock.json  package.json  vite.config.js
client/src/: App.vue
client/src/api/: alignment.js
client/src/assets/: base.css
client/src/views/: AboutView.vue  HomeView.vue
server/: Procfile  clean_data.sh  db.sqlite3  fetch_data.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
server/alignment_api/: admin.py  apps.py  models.py  schema.py  serializers.py  types.py  urls.py  views.py
server/alignment_api/migrations/: 0001_initial.py  0002_rename_token_sourcetoken_remove_link_sourcetokens_and_more.py  0003_alter_link_source_tokens_alter_link_target_tokens.py  0003_auto_20230303_1411.py  0004_auto_20230306_1456.py  0005_sourcetoken_gloss_alter_sourcetoken_text.py  0006_sourcetoken_lemma.py  0007_targettoken_is_punc.py  0008_alignment_type.py  0009_subject_mediaasset_sourcetoken_subjects.py  0010_license_mediaasset_copyright_mediaasset_creator_and_more.py
server/alignment_api/pipelines/: config.py  load_alignments.py  load_brandfolder.py  load_license.py  load_ubs_image_metadata.py
server/alignmentapi/: asgi.py  settings.py  urls.py  wsgi.py
server/loader_data/: Brandfolder.tsv  License.tsv  ReadMe.md  UBS-images-metadata.tsv
server/test_data/: media_assets.json  subject_token_refs.json  subjects.json
server/tests/: test_load_license.py  test_load_ubs_image_metadata.py
